[gd_scene load_steps=12 format=3 uid="uid://fjtvl4gxw6sd"]

[ext_resource type="Script" uid="uid://d0r0fpftlfun1" path="res://scenes/big_carousel.gd" id="1_wamd2"]
[ext_resource type="Texture2D" uid="uid://u4x6c264rr10" path="res://assets/ui/left.png" id="2_igyu6"]
[ext_resource type="Texture2D" uid="uid://c7xwi5pj2rgpl" path="res://assets/ui/right.png" id="3_7mt3l"]
[ext_resource type="Texture2D" uid="uid://ru0ce2lwv0mj" path="res://assets/content/images/b.jpg" id="3_daq26"]
[ext_resource type="Texture2D" uid="uid://cpwly600w7mpr" path="res://assets/ui/cross.png" id="4_daq26"]
[ext_resource type="Texture2D" uid="uid://dq1hxm1hbdv8c" path="res://assets/content/images/b_thumb.jpg" id="6_omqxi"]
[ext_resource type="Theme" uid="uid://dpnb8nwq0o1ki" path="res://assets/base_theme.tres" id="6_pm5jp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0431n"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wamd2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wamd2"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color(0, 0, 0, 0.752941)
shadow_size = 64
shadow_offset = Vector2(0, 8)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pm5jp"]
content_margin_top = 12.0
content_margin_bottom = 18.0

[node name="BigCarousel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0431n")
script = ExtResource("1_wamd2")

[node name="BackgroundPanel" type="PanelContainer" parent="."]
material = SubResource("CanvasItemMaterial_wamd2")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wamd2")

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 2

[node name="GalleryContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftButtons" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer/GalleryContainer"]
layout_mode = 2

[node name="EmptyButton" type="Button" parent="BackgroundPanel/VBoxContainer/GalleryContainer/LeftButtons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = ExtResource("6_pm5jp")
theme_override_constants/icon_max_width = 64
flat = true

[node name="LeftButton" type="Button" parent="BackgroundPanel/VBoxContainer/GalleryContainer/LeftButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_pm5jp")
theme_override_constants/icon_max_width = 64
icon = ExtResource("2_igyu6")
flat = true

[node name="Image" type="TextureRect" parent="BackgroundPanel/VBoxContainer/GalleryContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_daq26")
expand_mode = 2
stretch_mode = 5

[node name="RightButtons" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer/GalleryContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="BackgroundPanel/VBoxContainer/GalleryContainer/RightButtons"]
layout_mode = 2
theme = ExtResource("6_pm5jp")
theme_override_constants/icon_max_width = 64
icon = ExtResource("4_daq26")
flat = true

[node name="RightButton" type="Button" parent="BackgroundPanel/VBoxContainer/GalleryContainer/RightButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_pm5jp")
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 64
icon = ExtResource("3_7mt3l")
flat = true

[node name="Caption" type="Label" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("6_pm5jp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_pm5jp")
text = "TESTING
testing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThumbsScroller" type="ScrollContainer" parent="BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="ThumbsContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/ThumbsScroller"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="TextureRect" type="TextureRect" parent="BackgroundPanel/VBoxContainer/ThumbsScroller/ThumbsContainer"]
visible = false
layout_mode = 2
texture = ExtResource("6_omqxi")
expand_mode = 3

[connection signal="pressed" from="BackgroundPanel/VBoxContainer/GalleryContainer/LeftButtons/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/GalleryContainer/RightButtons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/GalleryContainer/RightButtons/RightButton" to="." method="_on_right_button_pressed"]
